--- a/src/index.html
+++ b/src/index.html
@@ -8,58 +8,115 @@
 </head>
 
 <body>
-  <div>Hello, world!</div>
-
-  <!-- Anchors (links) -->
-  <a href="about.html" class="button">Learn More</a>
-  <a href="#features" class="button">View All Features</a>
-
-  <!-- Buttons (actions) -->
-  <button type="button" class="success button">Save</button>
-  <button type="button" class="alert button">Delete</button>
-
-  <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-      <div class="orbit-wrapper">
-        <div class="orbit-controls">
-          <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-          <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+  <div class="container shadow">
+    <div class="header12" data-sticky-container>
+      <div class="top-bar sticky" data-sticky data-options="marginTop:0;">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Site Title</li>
+            <li>
+              <a href="#">One</a>
+              <ul class="menu vertical">
+                <li>
+                  <a href="#">One</a>
+                </li>
+                <li>
+                  <a href="#">Two</a>
+                </li>
+                <li>
+                  <a href="#">Three</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Two</a>
+            </li>
+            <li>
+              <a href="#">Three</a>
+            </li>
+          </ul>
         </div>
-        <ul class="orbit-container">
-          <li class="is-active orbit-slide">
-            <figure class="orbit-figure">
-              <img class="orbit-image" src="https://placehold.it/1200x600/999?text=Slide-1" alt="Space">
-              <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
-            </figure>
-          </li>
-          <li class="orbit-slide">
-            <figure class="orbit-figure">
-              <img class="orbit-image" src="https://placehold.it/1200x600/888?text=Slide-2" alt="Space">
-              <figcaption class="orbit-caption">Lets Rocket!</figcaption>
-            </figure>
-          </li>
-          <li class="orbit-slide">
-            <figure class="orbit-figure">
-              <img class="orbit-image" src="https://placehold.it/1200x600/777?text=Slide-3" alt="Space">
-              <figcaption class="orbit-caption">Encapsulating</figcaption>
-            </figure>
-          </li>
-          <li class="orbit-slide">
-            <figure class="orbit-figure">
-              <img class="orbit-image" src="https://placehold.it/1200x600/666&text=Slide-4" alt="Space">
-              <figcaption class="orbit-caption">Outta This World</figcaption>
-            </figure>
-          </li>
-        </ul>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li>
+              <input type="search" placeholder="Search">
+            </li>
+            <li>
+              <button type="button" class="button">Search</button>
+            </li>
+          </ul>
+        </div>
       </div>
-      <nav class="orbit-bullets">
-        <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
-        <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-        <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-        <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-      </nav>
     </div>
-
-    
+    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+        <div class="orbit-wrapper">
+          <div class="orbit-controls">
+            <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+            <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+          </div>
+          <ul class="orbit-container">
+            <li class="is-active orbit-slide">
+                <div>
+                    <h3 class="text-center">2: You can also throw some text in here!</h3>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam. Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora expedita.</p>
+                    <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                  </div>
+            </li>
+            <li class="orbit-slide">
+                <div>
+                    <h3 class="text-center">2: You can also throw some text in here!</h3>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam. Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora expedita.</p>
+                    <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                  </div>
+            </li>
+            <li class="orbit-slide">
+                <div>
+                    <h3 class="text-center">2: You can also throw some text in here!</h3>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam. Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora expedita.</p>
+                    <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                  </div>
+            </li>
+            <li class="orbit-slide">
+                <div>
+                    <h3 class="text-center">2: You can also throw some text in here!</h3>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam. Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora expedita.</p>
+                    <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                  </div>
+            </li>
+          </ul>
+        </div>
+        <nav class="orbit-bullets">
+          <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+          <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+          <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+          <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+        </nav>
+      </div>
+    <h1>h1. This is a very large header.</h1>
+    <h2>h2. This is a large header.</h2>
+    <h3>h3. This is a medium header.</h3>
+    <h4>h4. This is a moderate header.</h4>
+    <h5>h5. This is a small header.</h5>
+    <h6>h6. This is a tiny header.</h6>
+    <h1>h1. This is a very large header.</h1>
+    <h2>h2. This is a large header.</h2>
+    <h3>h3. This is a medium header.</h3>
+    <h4>h4. This is a moderate header.</h4>
+    <h5>h5. This is a small header.</h5>
+    <h6>h6. This is a tiny header.</h6>
+    <h1>h1. This is a very large header.</h1>
+    <h2>h2. This is a large header.</h2>
+    <h3>h3. This is a medium header.</h3>
+    <h4>h4. This is a moderate header.</h4>
+    <h5>h5. This is a small header.</h5>
+    <h6>h6. This is a tiny header.</h6>
+    <h1>h1. This is a very large header.</h1>
+    <h2>h2. This is a large header.</h2>
+    <h3>h3. This is a medium header.</h3>
+    <h4>h4. This is a moderate header.</h4>
+    <h5>h5. This is a small header.</h5>
+    <h6>h6. This is a tiny header.</h6>
+  </div>
   <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 
