--- a/src/index.html
+++ b/src/index.html
@@ -7,136 +7,125 @@
   <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 
-<body>
-  <div class="container shadow">
-    <div class="background-container"></div>
-    <div data-sticky-container>
-      <div class="top-bar sticky" data-sticky data-options="marginTop:0;" data-top-anchor="1" data-btm-anchor="content:bottom"> 
-        <div class="top-bar-left">
-          <ul class="menu ">
-            <li>
-              <a href="#">One</a>
-            </li>
-            <li>
-              <a href="#">Two</a>
-            </li>
-            <li>
-              <a href="#">Three</a>
-            </li>
-            <li>
-              <a href="#">Four</a>
-            </li>
-          </ul>
+<body data-sticky-container>
+  <div class="container data-sticky-container">
+    <div class="row image-bg" >
+      <div class="columns ">
+        <div class="top-bar  sticky" data-sticky data-margin-top="0">
+          <div class="top-bar-left">
+            <ul class="menu">
+              <li>
+                <a class="" href="#">XAZro</a>
+              </li>
+            </ul>
+          </div>
+          <div class="top-bar-right">
+            <ul class="menu">
+              <li>
+                <a class="" href="#">Home</a>
+              </li>
+              <li>
+                <a class="" href="#">About me</a>
+              </li>
+              <li>
+                <a class="" href="#">Profile</a>
+              </li>
+
+            </ul>
+          </div>
         </div>
-        <div class="top-bar-right">
-          <ul class="menu ">
-            <li>
-              <a href="#">One</a>
-            </li>
-            <li>
-              <a href="#">Two</a>
-            </li>
-            <li>
-              <a href="#">Three</a>
-            </li>
-            <li>
-              <a href="#">Four</a>
-            </li>
-          </ul>
+        <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+          <div class="orbit-wrapper"> 
+            <ul class="orbit-container">
+              <li class="is-active orbit-slide">
+                <div>
+                  <h3 class="text-center">2: You can also throw some text in here!</h3> 
+                </div>
+              </li>
+              <li class="orbit-slide">
+                <div> 
+                  <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                </div>
+              </li>
+              <li class="orbit-slide">
+                <div> 
+                  <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                </div>
+              </li>
+              <li class="orbit-slide">
+                <div> 
+                  <h3 class="text-center">This Orbit slider does not use animations.</h3>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
+
     </div>
-    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-      <div class="orbit-wrapper">
-        <div class="orbit-controls">
-          <button class="orbit-previous">
-            <span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-          <button class="orbit-next">
-            <span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-        </div>
-        <ul class="orbit-container">
-          <li class="is-active orbit-slide">
-            <div>
-              <h3 class="text-center">2: You can also throw some text in here!</h3>
-              <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam.
-                Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora
-                expedita.</p>
-              <h3 class="text-center">This Orbit slider does not use animations.</h3>
-            </div>
-          </li>
-          <li class="orbit-slide">
-            <div>
-              <h3 class="text-center">2: You can also throw some text in here!</h3>
-              <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam.
-                Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora
-                expedita.</p>
-              <h3 class="text-center">This Orbit slider does not use animations.</h3>
-            </div>
-          </li>
-          <li class="orbit-slide">
-            <div>
-              <h3 class="text-center">2: You can also throw some text in here!</h3>
-              <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam.
-                Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora
-                expedita.</p>
-              <h3 class="text-center">This Orbit slider does not use animations.</h3>
-            </div>
-          </li>
-          <li class="orbit-slide">
-            <div>
-              <h3 class="text-center">2: You can also throw some text in here!</h3>
-              <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde harum rem, beatae ipsa consectetur quisquam.
-                Rerum ratione, delectus atque tempore sed, suscipit ullam, beatae distinctio cupiditate ipsam eligendi tempora
-                expedita.</p>
-              <h3 class="text-center">This Orbit slider does not use animations.</h3>
-            </div>
-          </li>
-        </ul>
+    <div class="row">
+      <div class="medium-6 columns medium-push-6">
+        <img class="thumbnail" src="https://placehold.it/750x350">
       </div>
-      <nav class="orbit-bullets">
-        <button class="is-active" data-slide="0">
-          <span class="show-for-sr">First slide details.</span>
-          <span class="show-for-sr">Current Slide</span>
-        </button>
-        <button data-slide="1">
-          <span class="show-for-sr">Second slide details.</span>
-        </button>
-        <button data-slide="2">
-          <span class="show-for-sr">Third slide details.</span>
-        </button>
-        <button data-slide="3">
-          <span class="show-for-sr">Fourth slide details.</span>
-        </button>
-      </nav>
+      <div class="medium-6 columns medium-pull-6">
+        <h2>Our Agency, our selves.</h2>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+          mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien
+          justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor.</p>
+      </div>
     </div>
-    <div class="content">
-    <h1>h1. This is a very large header.</h1>
-    <h2>h2. This is a large header.</h2>
-    <h3>h3. This is a medium header.</h3>
-    <h4>h4. This is a moderate header.</h4>
-    <h5>h5. This is a small header.</h5>
-    <h6>h6. This is a tiny header.</h6>
-    <h1>h1. This is a very large header.</h1>
-    <h2>h2. This is a large header.</h2>
-    <h3>h3. This is a medium header.</h3>
-    <h4>h4. This is a moderate header.</h4>
-    <h5>h5. This is a small header.</h5>
-    <h6>h6. This is a tiny header.</h6>
-    <h1>h1. This is a very large header.</h1>
-    <h2>h2. This is a large header.</h2>
-    <h3>h3. This is a medium header.</h3>
-    <h4>h4. This is a moderate header.</h4>
-    <h5>h5. This is a small header.</h5>
-    <h6>h6. This is a tiny header.</h6>
-    <h1>h1. This is a very large header.</h1>
-    <h2>h2. This is a large header.</h2>
-    <h3>h3. This is a medium header.</h3>
-    <h4>h4. This is a moderate header.</h4>
-    <h5>h5. This is a small header.</h5>
-    <h6>h6. This is a tiny header.</h6>
-  </div>
-  </div>
-  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+    <div class="row">
+      <div class="medium-4 columns">
+        <h3>Photoshop</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+          mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+      </div>
+      <div class="medium-4 columns">
+        <h3>Javascript</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+          mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+      </div>
+      <div class="medium-4 columns">
+        <h3>Marketing</h3>
+        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+          mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+      </div>
+    </div>
+    <div class="row column">
+      <ul class="vertical medium-horizontal menu expanded text-center">
+        <li>
+          <a href="#">
+            <div class="stat">28</div>
+            <span>Websites</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="stat">43</div>
+            <span>Apps</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="stat">95</div>
+            <span>Ads</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="stat">59</div>
+            <span>Cakes</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="stat">18</div>
+            <span>Logos</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
 </body>
 
 </html>
